examples/type_system/failing/52_strict_public_missing_return_annotation.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// parity-expected-stderr-begin
// • 1 error • examples/type_system/failing/52_strict_public_missing_return_annotation.flx
// error[E417]: Strict Return Annotation Required
//
// Public function `add` must declare a return type in strict mode.
//
//   examples/type_system/failing/52_strict_public_missing_return_annotation.flx:22:8
//    |
// 22 | public fn add(x: Int, y: Int) {
//    |        ^^^^^^^^^^^^^^^^^^^^^^
//    |        ---------------------- missing return type annotation
//
// Hint:
//   Add `-> Type` to the function signature.
// parity-expected-stderr-end
// parity: vm_strict, llvm_strict
// expect: compile_error
// expect-error: E417

public fn add(x: Int, y: Int) {
    x + y
}

fn main() -> Unit {
}
